<resources>
    <string name="app_name">HeresaJob</string>
    <string name="title_activity_the_elder">TheElder</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_edge">EdgeActivity</string>
    <string name="title_activity_money">MoneyActivity</string>
    <string name="title_activity_self">SelfActivity</string>
    <string name="title_activity_cubical">cubicalActivity</string>
    <string name="title_activity_curious">curiousActivity</string>
    <string name="here_s_your_perfect_job_choices">Here\'s your perfect job choices!</string>
    <string name="leave_me_alone">LEAVE ME ALONE!</string>
    <string name="todo">TODO</string>
    <string name="editor">- Editor</string>
    <string name="telephone_marketer">- telephone marketer</string>
    <string name="wokring_in_finance">- Wokring in finance</string>
    <string name="that_s_some_good_stuff">That\'s some good stuff</string>
    <string name="mathematician">- Mathematician</string>
    <string name="investigator">- Investigator</string>
    <string name="researcher">- Researcher</string>
    <string name="here_are_your_perfect_job_choices">Here are your perfect job choices!</string>
    <string name="i_work_well_with_others">I work well with others</string>
    <string name="i_d_rather_work_by_byself">I\'d rather work by byself</string>
    <string name="i_like_to_help_people">I like to help people</string>
    <string name="here_is_where_you_can_find_the_right_career_for_you_quick_and_fast">Here is where you can find the
        right career for you! quick and fast!
    </string>
    <string name="welcome_to_getnow">Welcome to GetNow!</string>
    <string name="i_am_a_curious_person">I am a curious person</string>
    <string name="so_you_like_working_by_yourself">So you like working by yourself!</string>
    <string name="i_can_see_myself_working_in_a_cubical">I can see myself working in a cubical</string>
    <string name="i_like_to_learn_and_waste_my_money">I like to learn and waste my money</string>
    <string name="i_enjoy_living_on_the_edge">I enjoy living on the edge</string>
    <string name="i_find_the_elderly_to_be_cute">I find the elderly to be cute</string>
    <string name="so_you_like_to_help_people">So you like to help people!</string>
    <string name="hope_you_have_some_dough">Hope you have some dough</string>
    <string name="pilot">- Pilot</string>
    <string name="pychologist">- Pychologist</string>
    <string name="surgent">- Surgent</string>
    <string name="her_are_your_perfect_job_choices">Her are your perfect job choices!</string>
    <string name="title_activity_others">othersActivity</string>
    <string name="title_activity_gossip">gossipActivity</string>
    <string name="cleaning_calms_me">cleaning calms me</string>
    <string name="i_don_t_like_doing_much_work">I don\'t like doing much work</string>
    <string name="i_like_to_gossip">I like to gossip</string>
    <string name="so_you_work_well_in_teams">So you work well in teams!</string>
    <string name="title_activity_nowork">noworkActivity</string>
    <string name="omg_did_you_hear_about">OMG did you hear about...</string>
    <string name="receptionist">- receptionist</string>
    <string name="critic">- Critic</string>
    <string name="weather_man">- Weather man</string>
    <string name="heres_your_perfect_job_choices">Here\'s your perfect job choices!!</string>
    <string name="title_activity_cleaning">cleaningActivity</string>
    <string name="sit_back_and_relax">Sit back and relax</string>
    <string name="todo">TODO</string>
    <string name="gym_teacher">- gym teacher</string>
    <string name="magazine_editor">- Magazine editor</string>
    <string name="a_youtuber">- A youtuber</string>
    <string name="here_s_your_perfect__job_choices">Here\'s your perfect job choices!</string>
    <string name="a_clean_start">A clean start</string>
    <string name="todo">TODO</string>
    <string name="school_janiter">- School janiter</string>
    <string name="hotel_cleaning_lady">- Hotel cleaning lady</string>
    <string name="carpenter">- Carpenter</string>
    <string name="here_s_your__perfect_job_choices">Here\'s your perfect job choices!</string>
</resources>
