<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".curiousActivity">

    <TextView
            android:text="@string/here_are_your_perfect_job_choices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView25"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView" android:layout_marginTop="29dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.098" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>
    <TextView
            android:text="@string/researcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView26" android:layout_marginTop="102dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintVertical_bias="0.244"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"/>
    <TextView
            android:text="@string/investigator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView27" android:layout_marginTop="174dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.375" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>
    <TextView
            android:text="@string/mathematician"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView28" android:layout_marginTop="246dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>
    <ImageView
            android:src="@android:drawable/sym_def_app_icon"
            android:layout_width="156dp"
            android:layout_height="124dp"
            android:id="@+id/imageView5"
            android:contentDescription="@string/todo" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.981" android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>
    <TextView
            android:text="@string/that_s_some_good_stuff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView29"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.796" app:layout_constraintVertical_bias="0.792"
            android:layout_toEndOf="@+id/imageView5" android:layout_alignTop="@+id/imageView5"/>
</RelativeLayout>