<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".noworkActivity">

    <TextView
            android:text="@string/here_s_your_perfect__job_choices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView36" android:layout_marginTop="33dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503" app:layout_constraintVertical_bias="0.066"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"/>
    <TextView
            android:text="@string/a_youtuber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView37" android:layout_marginTop="129dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.238" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>
    <TextView
            android:text="@string/magazine_editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView38" android:layout_marginTop="259dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.39" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>
    <TextView
            android:text="@string/gym_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView39" android:layout_marginTop="198dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintVertical_bias="0.522"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"/>
    <ImageView
            android:src="@android:drawable/sym_def_app_icon"
            android:layout_width="161dp"
            android:layout_height="156dp"
            android:id="@+id/imageView7"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.979"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038" android:contentDescription="@string/todo"
            android:layout_alignParentStart="true" android:layout_alignParentBottom="true"/>
    <TextView
            android:text="@string/sit_back_and_relax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView40"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.695" app:layout_constraintVertical_bias="0.731"
            android:layout_toEndOf="@+id/imageView7" android:layout_alignTop="@+id/imageView7"/>
</RelativeLayout>