<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".gossipActivity">

    <TextView
            android:text="@string/heres_your_perfect_job_choices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView31"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.503" app:layout_constraintVertical_bias="0.068"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="59dp"/>
    <TextView
            android:text="@string/weather_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView32" android:layout_marginTop="223dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintVertical_bias="0.278"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"/>
    <TextView
            android:text="@string/critic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView33"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="243dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintVertical_bias="0.407"
            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"/>
    <TextView
            android:text="@string/receptionist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView34" android:layout_marginTop="144dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.539" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>
    <ImageView
            android:src="@android:drawable/sym_def_app_icon"
            android:layout_width="188dp"
            android:layout_height="162dp"
            android:id="@+id/imageView6"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.979"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:contentDescription="@string/todo"
            android:layout_alignParentStart="true" android:layout_alignParentBottom="true"/>
    <TextView
            android:text="@string/omg_did_you_hear_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView35"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.957" app:layout_constraintVertical_bias="0.72"
            android:layout_toEndOf="@+id/imageView6" android:layout_alignTop="@+id/imageView6"/>
</RelativeLayout>