<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".cleaningActivity">

    <TextView
            android:text="@string/here_s_your__perfect_job_choices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView41"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.503" app:layout_constraintVertical_bias="0.043"/>
    <TextView
            android:text="@string/carpenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView42" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.266"/>
    <TextView
            android:text="@string/hotel_cleaning_lady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView43" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.381"/>
    <TextView
            android:text="@string/school_janiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView44" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <ImageView
            android:src="@android:drawable/sym_def_app_icon"
            android:layout_width="156dp"
            android:layout_height="160dp"
            android:id="@+id/imageView8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.933"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.037" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/a_clean_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView45"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.571" app:layout_constraintVertical_bias="0.689"/>
</android.support.constraint.ConstraintLayout>