<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".cubicalActivity">

    <TextView
            android:text="@string/here_s_your_perfect_job_choices"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:id="@+id/textView20"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.503" app:layout_constraintVertical_bias="0.053"/>
    <TextView
            android:text="@string/wokring_in_finance"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/textView21" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.204"/>
    <TextView
            android:text="@string/telephone_marketer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView22" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.343"/>
    <TextView
            android:text="@string/editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView23" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.501"/>
    <ImageView
            android:src="@android:drawable/sym_def_app_icon"
            android:layout_width="138dp"
            android:layout_height="132dp"
            android:id="@+id/imageView4" android:contentDescription="@string/todo"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.034" app:layout_constraintVertical_bias="0.933"/>
    <TextView
            android:text="@string/leave_me_alone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView24"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.632" app:layout_constraintVertical_bias="0.739"/>
</android.support.constraint.ConstraintLayout>